# terradex-contracts

./: Cargo.toml  build_release.sh
contracts/terrapexc_factory/: Cargo.toml
contracts/terrapexc_factory/src/: contract.rs  state.rs  testing.rs
contracts/terrapexc_pair/: Cargo.toml
contracts/terrapexc_pair/src/: contract.rs  error.rs  state.rs  testing.rs
contracts/terrapexc_router/: Cargo.toml
contracts/terrapexc_router/src/: contract.rs  lib.rs  operations.rs  querier.rs  state.rs
contracts/terrapexc_router/src/testing/: tests.rs
contracts/terrapexc_token/: Cargo.toml
contracts/terrapexc_token/src/: contract.rs
contracts/terrapexc_trading/: Cargo.toml
contracts/terrapexc_trading/src/: contract.rs  error.rs  lib.rs  response.rs  state.rs  util.rs
