[package]
name = "terrapexc-factory"
version = "0.0.0"
authors = ["TERRAPEXC Labs."]
edition = "2021"
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
classic_terrapexc = { path = "../../packages/classic_terrapexc", default-features = false, version = "2.6.1"}
cosmwasm-std = { version = "0.16.7" }
cw-storage-plus = { version = "0.8.0" } 
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
protobuf = { version = "2", features = ["with-bytes"] }
cw20 = { version = "0.8.0" }
cw2 = { version = "0.8.0" } 

[dev-dependencies]
cosmwasm-schema = "0.16.0"
cosmwasm-storage = { version = "0.16.0" }
