[package]
name = "terrapexc-token"
version = "0.0.0"
authors = ["TERRAPEXC Labs."]
edition = "2021"
description = "Backward compatible implementation of a CosmWasm-20 compliant token"
license = "MIT"
repository = "https://github.com/terrapexc"
homepage = "https://terrapexc.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { version = "0.8.0" } 
cw2 = { version = "0.8.0" } 
cw20 = { version = "0.8.0" } 
cw20-base = {version = "0.8.0", features = ["library"]}
cw-storage-plus  = { version = "0.8.0" } 
cosmwasm-std = { version = "0.16.7" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
classic_terrapexc = { path = "../../packages/classic_terrapexc", version = "2.5.2" }

[dev-dependencies]
# we only need to enable this if we use integration tests
cosmwasm-schema = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
